...
                    android:text="Title: "
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"></TextView>

                <EditText
                    android:id="@+id/titletext"
                    android:layout_height="50dp"
                    android:layout_width="wrap_content"
                    android:hint="title"></EditText>
            </LinearLayout>

            <LinearLayout
...
                    android:text="Date: "
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"></TextView>

                <EditText
                    android:id="@+id/datetext"
                    android:layout_height="50dp"
                    android:layout_width="wrap_content"
                    android:hint="date"></EditText>
            </LinearLayout>
        </LinearLayout>

...
