<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Save Excursion"
        android:id="@+id/excursionsave"/>
    <item android:title="Delete Excursion"
        android:id="@+id/excursiondelete"/>
    <item android:title="Set Alert"
        android:id="@+id/excursionnotification"/>
</menu>